Bug 143129 - FILESAVE PPTX Custom slideshow to use setting is not exported
Summary: FILESAVE PPTX Custom slideshow to use setting is not exported
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Tibor Nagy (NISZ)
URL:
Whiteboard: target:7.3.0 target:7.2.1
Keywords: filter:pptx
Depends on:
Blocks: PPTX-SlideShowSettings
  Show dependency treegraph
 
Reported: 2021-06-30 10:44 UTC by NISZ LibreOffice Team
Modified: 2021-08-18 14:41 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
attachment 172508 saved with current nightly (46.60 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2021-06-30 10:44 UTC, NISZ LibreOffice Team
Details
Screenshot of the original and exported document side by side in Impress (85.94 KB, image/png)
2021-06-30 10:44 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2021-06-30 10:44:19 UTC
Created attachment 173285 [details]
attachment 172508 [details] saved with current nightly

This is a followup to bug 142590
Now the Custom slideshow to use PPTX setting is imported correctly, but not yet exported to PPTX.

Steps to reproduce:
    1. Open attachment 172508 [details]
    2. Open Slide Show – Slide Show Settings
    3. Notice that under Range the Custom slide show: Custom2 setting is selected
    4. Close the dialog, save as PPTX, reopen
    5. Open Slide Show – Slide Show Settings again

Actual results:
Under Range the All slides setting is selected.

Expected results:
Under Range the Custom slide show: Custom2 setting should be retained upon save to PPTX.

LibreOffice details:
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 9c15dea0b2192d231b65175291a7655122c2e24c
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: default; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2021-06-30 10:44:39 UTC
Created attachment 173286 [details]
Screenshot of the original and exported document side by side in Impress
Comment 2 BogdanB 2021-07-31 11:35:31 UTC
Confirm with
Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: 5aa74aa1e6fac571f99146ebcb6adc9feb1459ad
CPU threads: 4; OS: Linux 5.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2021-07-28_19:35:14
Calc: threaded
Comment 3 Commit Notification 2021-08-12 09:54:05 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/569cb54f1d82e993dcf1fd11d92d4cbd4f224a2d

tdf#143129 PPTX: custom slide show use as default is not exported.

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2021-08-12 17:30:34 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/6d0ef663227cde189b307036be7d3dfc6ca6ce4c

tdf#143129 PPTX: custom slide show use as default is not exported.

It will be available in 7.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 BogdanB 2021-08-18 14:41:33 UTC
Thnaks for fixing this bug. It is ok now
Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: 615a340fcf05845397ea3c9917e2eadf074b4514
CPU threads: 4; OS: Linux 5.11; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded