tdf#143129 PPTX: custom slide show use as default is not exported.

Change-Id: Ie8a53a79bd531cfe2c3b3559b70d28770ca8b960